# pritsepnye-resheniya

./: .gitignore  SECURITY.md  about.css  contacts.css  index.html  index.js  package-lock.json  package.json  product.css  webpack.config.js
backend/: README.md  pyproject.toml  req.txt
backend/backend/katalog/: admin.py  models.py  serializer.py  urls.py  views.py
backend/backend/katalog/migrations/: 0001_initial.py
backend/backend/src/: settings.py  urls.py
css/: style.css
image/дополнительные/Полуприцеп-тяжеловоз (раздвижной) 9835-0000050/: Полуприцеп-тяжеловоз 9835-0000050 (раздвижной).docx
image/дополнительные/Полуприцеп-тяжеловоз ДТ 9834-0000050/: Полуприцеп-тяжеловоз ДТ 9834-0000050.docx
src/: about.js  catalog.js  contacts.js  current-news.js  index.js  news.js  privacy-policy.js  product.js  robots.txt  sitemap.xml  vse-v-nalichii.js
src/components/: all-catalog.js  catalog-data.js  catalog.js  feedback.js  header.js  index-nalichie.js  product-render.js  product-slider.js  products-catalog.json  render-card.js  slider-main.js  slider-news.js  stock-in.js  swiper.js  utils.js
src/data/: products-availability.json
src/pages/: about.html  catalog.html  contacts.html  current-news.html  index.html  news.html  our-production.html  privacy-policy.html  product.html  vse-v-nalichii.html
src/styles/: about.css  all-news.css  breadcrumbs.css  catalog.css  contacts.css  current-news.css  footer.css  header.css  index.css  main-feedback-form.css  moving-button.css  our-production.css  product.css  reset.css  social-icons.css  vse-v-nalichii.css
(+54 files in other folders)
